# Prysma

./: .clangd  .clangd-tidy  .gitattributees  .gitignore  AUTHORS.md  CLA.md  CMakeLists.txt  CONTRIBUTING.FR.md  CONTRIBUTING.md  LICENSE  Makefile  Prysma.md  README.FR.md  README.fr.md  README.md  ReadMe.md  SECURITY.md  build.py  build_out.txt  compile_commands.json  debug.py  diagramme_complet.dot  note.txt  output.dot  output.ll  tout_le_projet.txt
Documents/LLVMDoc/: CMakeLists.txt  LLVMMethodeDoc.cpp
Documents/LLVMDoc/DecompilationC/: ConditionIf.ll  Instruction.md  Tableau.c  Tableau.ll
Tests/: CMakeLists.txt  Makefile  main.cpp  main.py  run_tests.py
Tests/Orchestration/: build_manager.py  test_cpp_unittest.py  test_project_prysma.py  test_projet_prysma.py
Tests/Orchestration/generation/: generateur_ast.py  generateur_visiteur.py  generateur_visiteur_cpp.py
Tests/PrysmaCodeTests/: ExecuterToutLesTests.py  TestBoucle.p  TestCondition.p  TestFonctionnelVariableBool.p  TestFonctionnelVariableFloat.p  TestFonctionnelVariableInt.p  TestRecursivité.p  TestTableauBool.p  TestTableauFloat.p  TestTableauInt.p
Tests/PrysmaCodeTests/ProjectTestEdgeCase/: TestArrayBool.p  TestArrayFloat.p  TestArrayInt.p  TestCondition.p  TestFunctionalVariableBool.p  TestFunctionalVariableFloat.p  TestFunctionalVariableInt.p  TestLoop.p  TestMemoryDynamic.p  TestRecursion.p  main.p
Tests/PrysmaCodeTests/ProjectTestEdgeCase/TestAllocationDynamicMemory/: TestNewDeleteBool.p  TestNewDeleteFloat.p  TestNewDeleteInt32.p  TestNewDeleteInt64.p  TestPassagePtrArgument.p
Tests/PrysmaCodeTests/ProjectTestMultiThreadEdgeCaseFile/TestDepth/: main.p
Tests/PrysmaCodeTests/ProjectTestMultiThreadEdgeCaseFile/TestDepth/ParentA/: ChildA.p  ChildB.p  ChildC.p  ChildD.p  ChildE.p  ParentA.p
Tests/PrysmaCodeTests/ProjectTestMultiThreadEdgeCaseFile/TestInclude/: main.p
Tests/PrysmaCodeTests/ProjectTestMultiThreadEdgeCaseFile/TestInclude/Math/: Addition.p  Math.p  Multiplication.p  Subtraction.p
Tests/PrysmaCodeTests/ProjectTestMultiThreadEdgeCaseFile/TestInclude/Validation/: ValidateFloat.p  ValidateInteger.p  Validation.p
Tests/PrysmaCodeTests/ProjectTestMultiThreadEdgeCaseFile/TestLoad/: LoadTest.py  LoadVolumeTest.py
Tests/PrysmaCodeTests/ProjetTestCasLimite/: TestFonctionnelVariableBool.p
Tests/PrysmaCodeTests/ProjetTestMultiThreadCasLimiteFichier/TestInclude/: main.p
Tests/PrysmaCodeTests/ProjetTestMultiThreadCasLimiteFichier/TestInclude/Math/: Addition.p  Math.p
Tests/PrysmaCodeTests/tests/: TestBoucle.p  TestCondition.p  TestFonctionnelVariableBool.p  TestFonctionnelVariableFloat.p  TestFonctionnelVariableInt.p  TestRecursivité.p  TestTableauBool.p  TestTableauFloat.p  TestTableauInt.p  testBoucle.p  testeFonctionnelVariable.p
Tests/include/: catch.hpp  main.h
Tests/src/Compilateur/AST/: test_ast.cpp
Tests/src/Compilateur/AST/Registre/: test_registre_argument.cpp  test_registre_type.cpp  (+4 more)
Tests/src/Compilateur/Lexer/: test_lexer.cpp
Tests/src/Compiler/AST/: test_ast.cpp
Tests/src/Compiler/Lexer/: test_lexer.cpp
tests/: CMakeLists.txt  generate_tests.py  historique.txt  orchestrator_test.py  run_perf_tests.py  run_tests.py  run_unit_tests.py  unit_test.py
tests/perf_tests/: CMakeLists.txt  lexer.cpp
tests/prysma_code_tests/project_test_edge_case/test_condition/: test_and_simple.p  test_arg_in_if.p  test_float_equal.p  test_float_less.p  test_int_equal.p  test_int_greater.p  test_nested_if.p  test_or_simple.p  test_parentheses.p
tests/prysma_code_tests/project_test_edge_case/test_functional_variable_bool/: test_logical_and.p  test_logical_and_variable.p  test_logical_not.p  test_logical_not_and_variable.p  test_logical_not_false.p  test_logical_or.p  test_logical_or_variable.p
tests/prysma_code_tests/project_test_edge_case/test_loop/: test_loop_condition_complex.p  test_loop_condition_external.p  test_loop_nested.p  test_loop_not_equal.p  test_loop_not_executed.p  test_loop_simple.p
tests/prysma_code_tests/project_test_edge_case/test_oriente_objet/: linked_list.p  test_linked_list.p  test_sruct_data.p
tests/prysma_code_tests/project_test_edge_case/test_recursion/: test_factorial.p  test_fibonacci.p  test_simple_recursion.p
tests/src/compiler/ast/: test_ast.cpp
tests/src/compiler/lexer/: test_lexer.cpp
tests/templates/: array_test_argument.p.jinja  array_test_assignment.p.jinja  array_test_iteration.p.jinja  array_test_out_of_bounds.p.jinja  array_test_reading.p.jinja  array_test_return.p.jinja  array_test_stack_integrity.p.jinja  array_variable_test.p.jinja  class_data_struct.p.jinja  class_method_with_arg.p.jinja  class_multiple_instances.p.jinja  class_nullptr.p.jinja  class_predicate_method.p.jinja  class_setter_getter.p.jinja  edge_case_limits.p.jinja  edge_case_logic_bool.p.jinja  edge_case_shadowing.p.jinja  fv_complex_precedence.p.jinja  fv_pass_arg.p.jinja  fv_simple_precedence.p.jinja  fv_state_update.p.jinja  operand_combinations.p.jinja  operand_random_equations.p.jinja
tests/templates/test_allocation_dynamic_memory/: mem_basic.p.jinja  mem_extreme.p.jinja  mem_negative.p.jinja  mem_pass_ptr.p.jinja  mem_pass_ptr_two_functions.p.jinja  mem_pass_two_ptr.p.jinja  mem_reassignment.p.jinja  mem_zero.p.jinja
tests/unit_tests/: CMakeLists.txt  generate_tests.py  orchestrator_test.py
tests/unit_tests/templates/: array_test_argument.p.jinja  array_test_assignment.p.jinja  array_test_iteration.p.jinja  array_test_out_of_bounds.p.jinja  array_test_reading.p.jinja  array_test_return.p.jinja  array_test_stack_integrity.p.jinja  array_variable_test.p.jinja  edge_case_limits.p.jinja  edge_case_logic_bool.p.jinja  edge_case_shadowing.p.jinja  fv_complex_precedence.p.jinja  fv_pass_arg.p.jinja  fv_simple_precedence.p.jinja  fv_state_update.p.jinja  operand_combinations.p.jinja  operand_random_equations.p.jinja
tests/unit_tests/templates/test_allocation_dynamic_memory/: mem_basic.p.jinja  mem_extreme.p.jinja  mem_negative.p.jinja  mem_pass_ptr.p.jinja  mem_pass_ptr_two_functions.p.jinja  mem_pass_two_ptr.p.jinja  mem_reassignment.p.jinja  mem_zero.p.jinja
(+963 files in other folders)
